DMA-BUF size may not match size from handleRemoteDesktopStarted()

QScreen::size() marshalled from xdg-desktop-portal-kde uses logical
scaled size but the DMA-BUF from pipewire is the physical pixel count.
We now check the DMA-BUF size each frame and resize the QImage buffer when
needed.

BUG: 482929
BUG: 478057
BUG: 464547